--- a/event.html
+++ b/event.html
@@ -24,9 +24,9 @@
             font-weight: bold;
         }
 
-        .logo {
-            width: 45px;
-        }
+        .logo { 
+            width: 45px; 
+        } 
 
         .logo.left{
             height: 80px;
@@ -37,22 +37,46 @@
             height: 80px;
         }
 
-        nav ul {
-            display: flex;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
+        .logo.left, .logo.right { 
+            align-self: flex-start; 
+        } 
 
-        nav ul li {
-            margin-right: 10px;
+        nav { 
+            display: flex; 
+            align-items: left; 
+            flex: 1; 
+        } 
+
+        nav ul { 
+            display: flex; 
+            list-style: none; 
+            margin: 0; 
+            padding: 0; 
+        } 
+
+        nav ul li { 
+            margin-right: 10px; 
             margin-top: -10px;
             margin-left: 15px;
+        } 
+
+        nav ul li a { 
+            color: aqua; 
+            text-decoration: none;
         }
 
-        nav ul li a {
-            color: aqua;
-            text-decoration: none;
+        .social-icons {
+            display: flex;
+        }
+
+        .social-icons a {
+            margin-left: 10px;
+            margin-top: -10px;
+        }
+
+        .social-icons img {
+            width: 24px;
+            height: 24px;
         }
 
         .content {
