--- a/event.html
+++ b/event.html
@@ -83,7 +83,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: calc(100vh - 60px); /* Adjust according to header height */
+            height: calc(100vh - 60px); 
         }
 
         .left-square, .right-square {
@@ -103,12 +103,11 @@
             border-radius: 15px;
         }
 
-        /* Container to position the elements side by side */
         .side-by-side {
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 20px; /* Adjust the gap as needed */
+            gap: 20px;
         }
 
         .rectangle {
@@ -234,23 +233,23 @@
         .trapezoid-link {
             display: block;
             text-decoration: none;
-            color: white; /* Sesuaikan dengan warna tema */
+            color: white;
             text-align: center;
             font-weight: bold;
             padding: 10px;
         }
 
         .trapezoid-link:hover {
-            background-color: rgba(255, 255, 255, 0.2); /* Efek hover */
+            background-color: rgba(255, 255, 255, 0.2); 
             transition: background-color 0.3s;
         }
 
         footer { 
             text-align: center;
             margin: auto;
-            background-color: rgba(51, 51, 51, 0.7); /* Warna latar belakang box dengan transparansi */
-            padding: 20px; /* Padding di sekitar konten footer */
-            border-radius: 10px; /* Membuat sudut lebih melengkung */
+            background-color: rgba(51, 51, 51, 0.7); 
+            padding: 20px; 
+            border-radius: 10px;
         }
 
         footer p {
