--- a/event.html
+++ b/event.html
@@ -2,15 +2,20 @@
 <html lang="en">
 <head>
     <style>
+        html {
+            height: 100%;
+        }
+        
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-size: cover;
-            height: 100%;
-            background-repeat: no-repeat;
-            background-image: url("image/event_bg.png");
+            background-image: url("image/studies_bg.png");
             color: aqua;
+            min-height: 100%;
+            display: flex;
+            flex-direction: column;
         }
 
         header {
@@ -121,7 +126,7 @@
 
         footer {
             text-align: center;
-            margin: auto;
+            margin-top: auto;
             background-color: rgba(51, 51, 51, 0.7);
             padding: 20px;
             border-radius: 10px;
