--- a/event.html
+++ b/event.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             background-size: cover;
-            background-image: url("image/studies_bg.png");
+            background-image: url("image/event_bg.png");
             color: aqua;
             min-height: 100%;
             display: flex;
