--- a/schedule.html
+++ b/schedule.html
@@ -15,7 +15,7 @@
             margin: 0;
             padding: 0;
             background-size: cover;
-            background-image: url("image/studies_bg.png");
+            background-image: url("image/schedule_bg.png");
             color: aqua;
             min-height: 100%;
             display: flex;
