--- a/schedule.html
+++ b/schedule.html
@@ -66,6 +66,14 @@
             margin-left: 15px;
         }
 
+        nav ul li a.active {
+            text-decoration: underline;
+            text-underline-offset: 5px; 
+            text-decoration-thickness: 2px; 
+            color: aqua;
+        }
+
+
         nav ul li a {
             color: aqua;
             text-decoration: none;
@@ -155,7 +163,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="event.html">Event</a></li>
                 <li><a href="studies.html">Studies</a></li>
-                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="schedule.html" class="active">Schedule</a></li>
             </ul>
         </nav>
         <img src="image/umn_logo.png" alt="Right Logo" class="logo right">
