--- a/event.html
+++ b/event.html
@@ -70,6 +70,13 @@
             text-decoration: none;
         }
 
+        nav ul li a.active {
+            text-decoration: underline;
+            text-underline-offset: 5px; 
+            text-decoration-thickness: 2px; 
+            color: aqua; 
+        }
+
         .social-icons {
             display: flex;
         }
