--- a/event.html
+++ b/event.html
@@ -158,7 +158,9 @@
                 <li><a href="schedule.html">Schedule</a></li>
             </ul>
         </nav>
+        <a href="https://www.umn.ac.id/" target="_blank">
         <img src="image/umn_logo.png" alt="UMN Logo" class="logo right">
+        </a>
     </header>
     <main>
         <div class="content">
