--- a/schedule.html
+++ b/schedule.html
@@ -166,7 +166,9 @@
                 <li><a href="schedule.html" class="active">Schedule</a></li>
             </ul>
         </nav>
-        <img src="image/umn_logo.png" alt="Right Logo" class="logo right">
+        <a href="https://www.umn.ac.id/" target="_blank">
+        <img src="image/umn_logo.png" alt="UMN Logo" class="logo right">
+        </a>
     </header>
     <main>
         <div class="content">
