--- a/studies.html
+++ b/studies.html
@@ -70,6 +70,14 @@
             text-decoration: none;
         }
 
+        nav ul li a.active {
+            text-decoration: underline;
+            text-underline-offset: 5px; 
+            text-decoration-thickness: 2px;
+            color: aqua; 
+        }
+
+
         .social-icons {
             display: flex;
         }
@@ -205,7 +213,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="event.html">Event</a></li>
-                <li><a href="studies.html">Studies</a></li>
+                <li><a href="studies.html" class="active">Studies</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
             </ul>
         </nav>
