--- a/index.html
+++ b/index.html
@@ -1,14 +1,137 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <style>
+        html {
+            height: 100%;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-size: cover;
             background-image: url("image/home_bg.png");
+            color: aqua;
+            min-height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #33333397;
+            padding: 10px 20px;
+            color: aqua;
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        .logo {
+            width: 45px;
+        }
+
+        .logo.left {
+            height: 80px;
+            width: 160px;
+        }
+
+        .logo.right {
+            height: 80px;
+        }
+
+        nav {
+            display: flex;
+            align-items: left;
+            flex: 1;
+        }
+
+        nav ul {
+            display: flex;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav ul li {
+            margin-right: 10px;
+            text-align: right;
+            margin-top: -10px;
+            margin-left: 15px;
+        }
+
+        nav ul li a {
+            color: aqua;
+            text-decoration: none;
+        }
+
+        nav ul li a.active {
+            text-decoration: underline;
+            text-underline-offset: 5px; 
+            text-decoration-thickness: 2px;
+            color: aqua; 
+        }
+
+
+        .social-icons {
+            display: flex;
+        }
+
+        .social-icons a {
+            margin-left: 10px;
+            margin-top: -10px;
+        }
+
+        .social-icons img {
+            width: 24px;
+            height: 24px;
+        }
+
+        .content {
+            padding: 20px;
+        }
+        .rectangle-container {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+        .rectangle {
+            width: 45%;
+            padding: 20px;
+            background-color: #444;
+            color: white;
+            text-align: center;
+            cursor: pointer;
+            position: relative;
+        }
+        .rectangle .light-grey {
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.8);
+            color: black;
+            justify-content: center;
+            align-items: center;
+        }
+        .rectangle.active .light-grey {
+            display: flex;
+        }
+        footer {
+            text-align: center;
+            margin-top: auto;
+            background-color: rgba(51, 51, 51, 0.7);
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        footer p {
+            margin: 0;
         }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,53 +143,50 @@
         <img src="image/ukm_logo.png" alt="UMN Robotic Club Logo" class="logo left">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="event.html">Event</a></li>
                 <li><a href="studies.html">Studies</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
             </ul>
-            <div class="social-icons">
-                <a href="https://www.instagram.com/umnroboticclub?igsh=aWI3MmU1NXh3MDE=" target="_blank">
-                    <img src="image/insta_icon.png" alt="Instagram">
-                </a>
-                <a href="https://line.me/R/ti/g/9sE5tNjj3m" target="_blank">
-                    <img src="image/line_icon.png" alt="LINE">
-                </a>
-            </div>
         </nav>
-        <img src="image/umn_logo.png" alt="UMN Robotic Club Logo" class="logo right">
+        <a href="https://www.umn.ac.id/" target="_blank">
+        <img src="image/umn_logo.png" alt="UMN Logo" class="logo right">
+        </a>
     </header>
     <div class="content">
         <div class="rectangle-container">
-            <div class="rectangle dark-grey">
-                    <p>About UMN Robotic Club</p>
-                </a>
-        <div class="light-grey">
-                    <span class="hover-text"> </span>
+            <div class="rectangle dark-grey" onclick="toggleActive(this)">
+                <p>About UMN Robotic Club</p>
+                <div class="light-grey">
+                    <span class="hover-text">UKM Robotic atau yang lebih dikenal dengan UMN Robotic Club (URC) merupakan sebuah unit kegiatan mahasiswa yang berfokus terhadap pengembangan otomasi, internet of things (IOT), dan artificial intelligent (AI) menjadi sebuah produk yang dapat memberikan kontribusi kepada masyarakat dalam mengatasi permasalahan yang ada. UMN Robotic Club berada dalam naungan prodi teknik elektro. Namun, anggota UMN Robotic Club terdiri dari berbagai macam prodi, seperti : Teknik informatika, teknik komputer, desain komunikasi visual, dan masih banyak lagi. Bukan hanya belajar mengenai robotika, dalam UKM Robotic dapat mengakomodasi pertukaran pengetahuan dari bermacam prodi.
+
+Untuk saat ini, UMN Robotic Club sedang berfokus untuk mengikuti kompetisi robotik nasional (KRI) kategori hexapod. Hexapod sendiri merupakan sebuah robot berkaki enam yang dapat bergerak sendiri mengikuti input sensor. Bukan hanya itu, kedepan akan banyak perlombaan di bidang robotika yang akan diikuti oleh para anggota UMN Robotic Club. Karena di UKM Robotic, kita tidak hanya belajar namun juga berkompetisi dengan universitas lagi. </span>
                 </div>
-            <div class="rectangle dark-grey">
-                    <p>Join UMN Robotic Club!</p>
-                </a>
+            </div>
+            <div class="rectangle dark-grey" onclick="toggleActive(this)">
+                <p>Join UMN Robotic Club!</p>
                 <div class="light-grey">
                     <span class="hover-text">Entry unavailable this semester.</span>
                 </div>
             </div>
+        </div>
     </div>
-
-            
-       <footer>
-        <p>UMN.Robotic.Club<br>Club Association Of UMN Robotic<br></p>
+    <footer>
+        <p>UMN.Robotic.Club<br>Club Association Of UMN Robotic</p>
         <p>&copy; 2024 | This site has copyright.</p>
         <div class="social-icons">
-                <a href="https://www.instagram.com/umnroboticclub?igsh=aWI3MmU1NXh3MDE=" target="_blank">
-                    <img src="image/insta_icon.png" alt="Instagram">
-                </a>
-                <a href="https://line.me/R/ti/g/9sE5tNjj3m" target="_blank">
-                    <img src="image/line_icon.png" alt="LINE">
-                </a>
+            <a href="https://www.instagram.com/umnroboticclub?igsh=aWI3MmU1NXh3MDE=" target="_blank">
+                <img src="image/insta_icon.png" alt="Instagram">
+            </a>
+            <a href="https://line.me/R/ti/g/9sE5tNjj3m" target="_blank">
+                <img src="image/line_icon.png" alt="LINE">
+            </a>
         </div>
     </footer>
-    <script src="scripts.js"></script>
+    <script>
+        function toggleActive(element) {
+            element.classList.toggle('active');
+        }
+    </script>
 </body>
-            
 </html>
