--- a/studies.html
+++ b/studies.html
@@ -217,7 +217,9 @@
                 <li><a href="schedule.html">Schedule</a></li>
             </ul>
         </nav>
-        <img src="image/umn_logo.png" alt="Right Logo" class="logo right">
+        <a href="https://www.umn.ac.id/" target="_blank">
+        <img src="image/umn_logo.png" alt="UMN Logo" class="logo right">
+        </a>
     </header>
 
     <div class="wrapper">
