--- a/schedule.html
+++ b/schedule.html
@@ -153,6 +153,79 @@
         ul#schedule-details li {
             margin: 10px 0;
         }
+        /* Responsive CSS */
+        @media (max-width: 768px) {
+            body {
+                flex-direction: column;
+                padding: 10px;
+            }
+
+            header {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .logo.left, .logo.right {
+                width: 120px;
+                height: auto;
+            }
+
+            nav ul {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            nav ul li {
+                margin: 5px 0;
+            }
+
+            .content {
+                flex-direction: column;
+                align-items: center;
+                padding: 20px 0;
+                gap: 20px;
+            }
+
+            .left-square, .right-square {
+                width: 90%;
+            }
+
+            #calendar {
+                font-size: 14px;
+                padding: 8px;
+            }
+
+            footer {
+                font-size: 14px;
+            }
+
+            .social-icons img {
+                width: 20px;
+                height: 20px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header {
+                padding: 5px 10px;
+            }
+
+            .logo.left, .logo.right {
+                width: 100px;
+            }
+
+            nav ul li {
+                font-size: 14px;
+            }
+
+            .content {
+                padding: 10px 0;
+            }
+
+            footer {
+                padding: 10px;
+            }
+        }
     </style>
 </head>
 <body>
