--- a/index.html
+++ b/index.html
@@ -84,6 +84,60 @@
             color: aqua;
             width: 100%;
         }
+
+        @media screen and (max-width: 768px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
+
+    .logo.left,
+    .logo.right {
+        width: 100px;
+        height: auto;
+        margin: 10px 0;
+    }
+
+    nav ul {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .rectangle-container {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .rectangle {
+        width: 100%;
+    }
+
+    .hover-text {
+        font-size: 14px;
+    }
+
+    footer {
+        font-size: 14px;
+        padding: 15px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .rectangle .hover-text {
+        font-size: 12px;
+    }
+
+    nav ul {
+        gap: 5px;
+    }
+
+    .social-icons img {
+        width: 20px;
+        height: 20px;
+    }
+}
+
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UMN Robotic Club</title>
