--- a/event.html
+++ b/event.html
@@ -142,6 +142,22 @@
         footer p {
             margin: 0;
         }
+
+        @media screen and (max-width: 768px) {
+    .content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .left-square, .right-square {
+        width: 90%;
+        margin-bottom: 20px;
+    }
+
+    .event-list li {
+        font-size: 16px;
+    }
+}
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
