--- a/event.html
+++ b/event.html
@@ -209,9 +209,12 @@
                 </a>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
+    <script 
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-QFYcHefJI7ecAE6xwn2XjtXzXT9uU7xGMl7ybaiC8luA6a6m4vBSs5V6zmy2uaeB" 
-        crossorigin="anonymous">
+        crossorigin="anonymous"
+    ></script>
+    <script>
         const events = [
             {
                 date: '2025-01-15',
