--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-8L5nO9Icx2f9tOlMzFTRWz7bN3jZ9gT9EdJ7hrNfqE+Y5PS8Mc/a1u3zlrZoS4Z5" 
+        crossorigin="anonymous"
+    >
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -189,6 +195,11 @@ Untuk saat ini, UMN Robotic Club sedang berfokus untuk mengikuti kompetisi robot
             </a>
         </div>
     </footer>
+    <script 
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-QFYcHefJI7ecAE6xwn2XjtXzXT9uU7xGMl7ybaiC8luA6a6m4vBSs5V6zmy2uaeB" 
+        crossorigin="anonymous"
+    ></script>
     <script>
         function toggleActive(element) {
             element.classList.toggle('active');
