--- a/studies.html
+++ b/studies.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+z<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -356,6 +356,8 @@
             overlay.classList.remove('active');
         }
     </script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 
     <footer>
         <p>UMN.Robotic.Club<br>Club Association Of UMN Robotic</p>
