--- a/event.html
+++ b/event.html
@@ -203,6 +203,8 @@
                 </a>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         const events = [
             {
@@ -243,8 +245,7 @@
                 <h2>${selectedEvent.title}</h2>
                 <p><strong>Date:</strong> ${selectedEvent.date}</p>
                 <p><strong>Time:</strong> ${selectedEvent.time}</p>
-                <p>${selectedEvent.description}</p>
-            ;
+                <p>${selectedEvent.description}</p>;
         }
     </script>
 </body>
