--- a/event.html
+++ b/event.html
@@ -237,16 +237,17 @@
         });
 
         function displayEventDetails(event) {
-            const eventIndex = event.target.dataset.index;
-            const selectedEvent = events[eventIndex];
+    const eventIndex = event.target.dataset.index;
+    const selectedEvent = events[eventIndex];
 
-            const eventDetails = document.getElementById('eventDetails');
-            eventDetails.innerHTML = 
-                <h2>${selectedEvent.title}</h2>
-                <p><strong>Date:</strong> ${selectedEvent.date}</p>
-                <p><strong>Time:</strong> ${selectedEvent.time}</p>
-                <p>${selectedEvent.description}</p>;
-        }
+    const eventDetails = document.getElementById('eventDetails');
+    eventDetails.innerHTML = `
+        <h2>${selectedEvent.title}</h2>
+        <p><strong>Date:</strong> ${selectedEvent.date}</p>
+        <p><strong>Time:</strong> ${selectedEvent.time}</p>
+        <p>${selectedEvent.description}</p>
+        `;
+    }
     </script>
 </body>
 </html>
